# b2draw

./: .bumpversion.cfg  .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  b2draw-config.cmake.in  b2draw-targets.cmake  b2draw.pc.in
demo/: CMakeLists.txt  main.cpp
demo/util/: deleters.h  gl.cpp  gl.h
dependencies/: enforce.cmake  versions.cmake
include/: constants.h.in
include/b2draw/: DebugDraw.h  PrimitiveRenderer.h  algorithm.h  traits.h
src/: DebugDraw.cpp  PrimitiveRenderer.cpp
